# aether-physx

./: .gitignore  installer_metadata.txt
PhysicsDemo/Client/: TutorialClient.sln  TutorialClient.vcxproj  TutorialClient.vcxproj.filters  packages.config
PhysicsDemo/Client/aether-sdk/include/aether/: repclient.hh
PhysicsDemo/Client/aether-sdk/include/aether/common/: async_connector.hh  base_protocol.hh  client_message.hh  collision.hh  colour.hh  compression.hh  eigen_converters.hh  eigen_serde.hh  hadean_platform.hh  hash.hh  hex.hh  logging.hh  math_utils.hh  mpl.hh  net.hh  packing.hh  random.hh  rigidbody.hh  serde.hh  serde_derive.hh  span.hh  statistics.hh  tcp.hh  vector.hh
PhysicsDemo/Client/aether-sdk/include/aether/common/container/: max_heap.hh  ring_buffer.hh
PhysicsDemo/Client/aether-sdk/include/aether/common/io/: in_memory.hh  io.hh  zstd.hh
PhysicsDemo/Client/aether-sdk/include/aether/common/morton/: AABB.hh  aabb_merger.hh  cell.hh  encoding.hh  interval.hh  region.hh  traits.hh  util.hh
PhysicsDemo/Client/aether-sdk/include/aether/common/netcode/: transcode.hh
PhysicsDemo/Client/aether-sdk/include/aether/generic-netcode/: entity_store.hh  generic_netcode.hh  interest_policy.hh  marshalling.hh  spatial_index.hh  trivial_marshalling.hh
PhysicsDemo/Client/aether-sdk/src/: compression.cc  generic_netcode.cc  math_utils.cc  repclient.cc  tcp.cc  tcp_internal.hh
PhysicsDemo/Client/src/: meshes.hh  physx_client.cc  physx_client.hh  shaders.hh  statistic.hh  util.hh
PhysicsDemo/Simulation/: CMakeLists.txt  main.cc  protocol.hh  simulate.cc  simulate.hh
PhysicsDemo/Simulation/physx_tutorial-muxer/: CMakeLists.txt  muxer.cc
